--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,13 @@
 body {
     background-color: #0d0807;
     color: #edeec0; 
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    font-family: "Mono";
 }
 
 h1 {
@@ -16,3 +23,16 @@ h1::after {
     content: ")";
 }
 
+h1 a {
+    text-decoration: none;
+}
+
+#content {
+    max-width: 600px;
+    margin: 0 auto;
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
